basic render nodes

--- a/FunctionalPharo/FunctionalPharo.fsproj
+++ b/FunctionalPharo/FunctionalPharo.fsproj
@@ -60,6 +60,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Render.fs" />
+    <Compile Include="State.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
