working on sizing

--- a/PharonicScheduler/PharonicScheduler.fsproj
+++ b/PharonicScheduler/PharonicScheduler.fsproj
@@ -60,8 +60,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="CommonData.fs" />
     <Compile Include="Render.fs" />
-    <Compile Include="State.fs" />
+    <Compile Include="Components.fs" />
+    <Compile Include="examples\TodoMVC.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
